@@ -1,4 +1,5 @@
 Development
+    Issue #467, playlist and details not disappearing
     Fix compile failure on fy.po, really dumb failure
     libgmtk - Dispose widgets properly, should solve memory leak
     libgmtk - gmtk_media_player, remove usage of GFileMonitor, not needed
